--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "@mui/icons-material": "^5.15.10",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
